# BrainScanAI

./: .gitignore  Dockerfile  LICENSE  README.md  benchmark_results.csv  img_path.csv  important_commands.md  kaggle_data_download.sh  ngc_container_libraries.txt  pyproject.toml  requirements.txt  run_container.sh
docker_logs/: ngc_packages_25.01.txt
notebooks/: 01_training.ipynb  02_benchmark.ipynb  test_env.ipynb
