[project]
name = "brainscanai"
version = "0.1.0"
description = "A simple study on how neural network architectures improve brain tumor detection"
readme = "README.md"
requires-python = ">=3.12"
license = { file = "LICENSE" }
authors = [
    { name = "Julien Pigeon" },
]

dependencies = [
    # --- ML / vision stack (non présent dans NGC) ---
    "transformers>=4.40,<6",
    "captum>=0.7,<1",
    "evaluate>=0.4,<1",
    "accelerate>=0.30",
    "albumentations>=1.4,<3",
    "open-clip-torch>=2.0",
    "imagehash>=4.3",

    # --- Visualisation / utils ---
    "seaborn>=0.13",
    "plotly>=5.20",
    "scikit-image>=0.22",

    # --- Contraintes critiques pour compatibilité NGC ---
    # Empêche numpy 2.x (incompatible avec une partie de l'écosystème CUDA actuel)
    "numpy>=1.26,<2",

    # Empêche albumentations de tirer une version trop récente d'opencv
    "opencv-python-headless>=4.9,<4.11",

    # --- Déjà présents dans NGC (laisser libres) ---
    "scikit-learn>=1.3",
    "pandas>=2.0",
    "matplotlib>=3.8",
]

[project.optional-dependencies]
dev = [
    "ruff>=0.6",
]

all = ["brainscanai[dev]"]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
bypass-selection = true